# CS251

./: .gitignore  README.md
assignment1/: .gitignore  CMakeLists.txt  README.md  index.html
assignment1/include/: AllocationTracker.h  SimpleArray.h
assignment1/src/: AllocationTracker.cpp
assignment1/tests/: main.cpp  moreTests.cpp  simpleArrayTest.cpp
assignment2/: CMakeLists.txt  README.md
assignment2/include/: AllocationTracker.h
assignment2/src/: AllocationTracker.cpp
assignment2/tests/: main.cpp  moreTests.cpp  scopedArrayTest.cpp
assignment3/: .travis.sh  CMakeLists.txt  README.md
assignment3/include/: ArrayList.h
assignment3/tests/: arrayTest.cpp
assignment4/: CMakeLists.txt  README.md
assignment4/include/: ArrayList.h  ArrayListIter.h
assignment4/tests/: arrayIterTest.cpp  arrayTest.cpp  main.cpp
assignment5/: .clang-format  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md
assignment5/include/: ArrayList.h  ArrayListIter.h  Object.h  ObjectFactory.h  Parser.h  ScopedArray.h  Universe.h  Visitor.h  vector2.h
assignment5/src/: ArrayList.cpp  ArrayListIter.cpp  Object.cpp  ObjectFactory.cpp  Parser.cpp  ScopedArray.cpp  Universe.cpp  Visitor.cpp  vector2.cpp
assignment5/tests/: UCMtest.txt  UMCTest.cpp  inertiaTest.cpp  inertiaTest.txt  main.cpp  testHelper.h  visitorTest.cpp  visitorTest.txt
assignments/assignment1/: index.html
assignments/assignment2/: index.html
assignments/assignment3/: .project  AndroidManifest.xml  index.html
assignments/assignment4-grad/: .project  AndroidManifest.xml  index.html
(+245 files in other folders)
